Second test commit

--- a/test/index.html
+++ b/test/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>My test page on pages.github.io</title>
-</head>
-<body>
-	My test page on pages.github.io
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>My test page on pages.github.io</title>
+  </head>
+  <body>
+    <p>My test page on pages.github.io</p>
+    
+    <p>I'll store my projects here.</p>
+  </body>
 </html>
