--- a/meteor/index.html
+++ b/meteor/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The Cursovik</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/js/lightbox2/css/lightbox.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="js/lightbox2/css/lightbox.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
-    <link rel="shortcut icon" href="/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="favicon.png" type="image/png">
 </head>
 <body>
     <div class="box--head">
@@ -17,7 +17,7 @@
                 <div class="row">
                     <div class="col-lg-3">
                         <a href="/">
-                            <img src="/img/white_logo.png" alt="Meteor company main page" class="logo">
+                            <img src="img/white_logo.png" alt="Meteor company main page" class="logo">
                         </a>
                     </div>
 
@@ -107,7 +107,7 @@
                 </div>
                 <div class="col-lg-6 sm-hide">
                     <div class="offers-photo">
-                        <img src="/img/what-we-do-right-image.png" alt="New offers">
+                        <img src="img/what-we-do-right-image.png" alt="New offers">
                     </div>
                 </div>
             </div>
@@ -143,42 +143,42 @@
             <div class="row row--gallery">
                 <div class="col-lg-3 col-sm-4 col-xs-6">
                     <a href="/img/portfolio_big_01.jpg" data-lightbox="image-1" data-title="Фото любимого стула">
-                        <img src="/img/portfolio_01.jpg" alt="gallery photo 1">
+                        <img src="img/portfolio_01.jpg" alt="gallery photo 1">
                     </a>
                 </div>
                 <div class="col-lg-3 col-sm-4 col-xs-6">
                     <a href="/img/portfolio_big_02.jpg" data-lightbox="image-1" data-title="Ненавижу когда на ноуте кофе стоит">
-                        <img src="/img/portfolio_02.jpg" alt="gallery photo 2">
+                        <img src="img/portfolio_02.jpg" alt="gallery photo 2">
                     </a>
                 </div>
                 <div class="col-lg-3 col-sm-4 col-xs-6">
                     <a href="/img/portfolio_big_03.jpg" data-lightbox="image-1" data-title="Тот же бардак, но с другой стороны">
-                        <img src="/img/portfolio_03.jpg" alt="gallery photo 3">
+                        <img src="img/portfolio_03.jpg" alt="gallery photo 3">
                     </a>
                 </div>
                 <div class="col-lg-3 col-sm-4 col-xs-6">
                     <a href="/img/portfolio_big_04.jpg" data-lightbox="image-1" data-title="Вид из самого большого окна в офисе">
-                        <img src="/img/portfolio_04.jpg" alt="gallery photo 4">
+                        <img src="img/portfolio_04.jpg" alt="gallery photo 4">
                     </a>
                 </div>
                 <div class="col-lg-3 col-sm-4 xs-hide">
                     <a href="/img/portfolio_big_05.jpg" data-lightbox="image-1" data-title="Это шеф шлет фотки, пока мы тут вкалываем">
-                        <img src="/img/portfolio_05.jpg" alt="gallery photo 5">
+                        <img src="img/portfolio_05.jpg" alt="gallery photo 5">
                     </a>
                 </div>
                 <div class="col-lg-3 col-sm-4 xs-hide">
                     <a href="/img/portfolio_big_06.jpg" data-lightbox="image-1" data-title="Мы обиделись и решили сжечь его любимого штурмовика">
-                        <img src="/img/portfolio_06.jpg" alt="gallery photo 6">
+                        <img src="img/portfolio_06.jpg" alt="gallery photo 6">
                     </a>
                 </div>
                 <div class="col-lg-3 sm-hide">
                     <a href="/img/portfolio_big_07.jpg" data-lightbox="image-1" data-title="Ясное дело - пятница...">
-                        <img src="/img/portfolio_07.jpg" alt="gallery photo 7">
+                        <img src="img/portfolio_07.jpg" alt="gallery photo 7">
                     </a>
                 </div>
                 <div class="col-lg-3 sm-hide">
                     <a href="/img/portfolio_big_08.jpg" data-lightbox="image-1" data-title="Знаете почему смеется? Предыдущее фото сделано в четверг...">
-                        <img src="/img/portfolio_08.jpg" alt="gallery photo 8">
+                        <img src="img/portfolio_08.jpg" alt="gallery photo 8">
                     </a>
                 </div>
             </div>
@@ -196,7 +196,7 @@
             <div class="row row--posts">
                 <div class="col-lg-6 col-sm-12">
                     <div class="blog__post">
-                        <img src="/img/blog_01.jpg" alt="Delicioius Food Served" class="post__photo">
+                        <img src="img/blog_01.jpg" alt="Delicioius Food Served" class="post__photo">
                         <div class="post__caption">
                             <p class="post__caption--header">Delicioius Food Served</p>
                             <p class="post__caption--description">Posted: <span>George</span> / Date: <span>11 Aug 2017</span> / Category: <span>Design</span></p>
@@ -205,7 +205,7 @@
                 </div>
                 <div class="col-lg-6 col-sm-12">
                     <div class="blog__post blog__post--half blog__post--first">
-                        <img src="/img/blog_02.jpg" alt="" class="post__photo">
+                        <img src="img/blog_02.jpg" alt="" class="post__photo">
                         <div class="post__caption">
                             <p class="post__caption--header">Creative & Clean Workspace</p>
                             <p class="post__caption--description">Posted: <span>Kerley</span> / Date: <span>24 Jul 2017</span> / Category: <span>Artwork</span></p>
@@ -213,7 +213,7 @@
                     </div>
 
                     <div class="blog__post blog__post--half">
-                        <img src="/img/blog_03.jpg" alt="" class="post__photo">
+                        <img src="img/blog_03.jpg" alt="" class="post__photo">
                         <div class="post__caption">
                             <p class="post__caption--header">Crashed Plane Captured</p>
                             <p class="post__caption--description">Posted: <span>Johnny</span> / Date: <span>16 Aug 2017</span> / Category: <span>Branding</span></p>
@@ -269,7 +269,7 @@
             <div class="row row--contacts">
                 <div class="col-lg-6 col-xs-12">
                     <div class="box__map">
-                        <img src="/img/map.jpg" alt="Карта">
+                        <img src="img/map.jpg" alt="Карта">
                     </div>
                 </div>
 
@@ -326,7 +326,7 @@
     </form>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="/js/lightbox2/js/lightbox.js"></script>
-    <script src="/js/common.js"></script>
+    <script src="js/lightbox2/js/lightbox.js"></script>
+    <script src="js/common.js"></script>
 </body>
 </html>
