Meteor landing php to html convert commit

--- a/meteor/index.html
+++ b/meteor/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>The Cursovik</title>
+    <title>The Meteor template</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="js/lightbox2/css/lightbox.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
