Meteor landing php to html convert commit

--- a/meteor/index.html
+++ b/meteor/index.html
@@ -142,42 +142,42 @@
 
             <div class="row row--gallery">
                 <div class="col-lg-3 col-sm-4 col-xs-6">
-                    <a href="/img/portfolio_big_01.jpg" data-lightbox="image-1" data-title="Фото любимого стула">
+                    <a href="img/portfolio_big_01.jpg" data-lightbox="image-1" data-title="Фото любимого стула">
                         <img src="img/portfolio_01.jpg" alt="gallery photo 1">
                     </a>
                 </div>
                 <div class="col-lg-3 col-sm-4 col-xs-6">
-                    <a href="/img/portfolio_big_02.jpg" data-lightbox="image-1" data-title="Ненавижу когда на ноуте кофе стоит">
+                    <a href="img/portfolio_big_02.jpg" data-lightbox="image-1" data-title="Ненавижу когда на ноуте кофе стоит">
                         <img src="img/portfolio_02.jpg" alt="gallery photo 2">
                     </a>
                 </div>
                 <div class="col-lg-3 col-sm-4 col-xs-6">
-                    <a href="/img/portfolio_big_03.jpg" data-lightbox="image-1" data-title="Тот же бардак, но с другой стороны">
+                    <a href="img/portfolio_big_03.jpg" data-lightbox="image-1" data-title="Тот же бардак, но с другой стороны">
                         <img src="img/portfolio_03.jpg" alt="gallery photo 3">
                     </a>
                 </div>
                 <div class="col-lg-3 col-sm-4 col-xs-6">
-                    <a href="/img/portfolio_big_04.jpg" data-lightbox="image-1" data-title="Вид из самого большого окна в офисе">
+                    <a href="img/portfolio_big_04.jpg" data-lightbox="image-1" data-title="Вид из самого большого окна в офисе">
                         <img src="img/portfolio_04.jpg" alt="gallery photo 4">
                     </a>
                 </div>
                 <div class="col-lg-3 col-sm-4 xs-hide">
-                    <a href="/img/portfolio_big_05.jpg" data-lightbox="image-1" data-title="Это шеф шлет фотки, пока мы тут вкалываем">
+                    <a href="img/portfolio_big_05.jpg" data-lightbox="image-1" data-title="Это шеф шлет фотки, пока мы тут вкалываем">
                         <img src="img/portfolio_05.jpg" alt="gallery photo 5">
                     </a>
                 </div>
                 <div class="col-lg-3 col-sm-4 xs-hide">
-                    <a href="/img/portfolio_big_06.jpg" data-lightbox="image-1" data-title="Мы обиделись и решили сжечь его любимого штурмовика">
+                    <a href="img/portfolio_big_06.jpg" data-lightbox="image-1" data-title="Мы обиделись и решили сжечь его любимого штурмовика">
                         <img src="img/portfolio_06.jpg" alt="gallery photo 6">
                     </a>
                 </div>
                 <div class="col-lg-3 sm-hide">
-                    <a href="/img/portfolio_big_07.jpg" data-lightbox="image-1" data-title="Ясное дело - пятница...">
+                    <a href="img/portfolio_big_07.jpg" data-lightbox="image-1" data-title="Ясное дело - пятница...">
                         <img src="img/portfolio_07.jpg" alt="gallery photo 7">
                     </a>
                 </div>
                 <div class="col-lg-3 sm-hide">
-                    <a href="/img/portfolio_big_08.jpg" data-lightbox="image-1" data-title="Знаете почему смеется? Предыдущее фото сделано в четверг...">
+                    <a href="img/portfolio_big_08.jpg" data-lightbox="image-1" data-title="Знаете почему смеется? Предыдущее фото сделано в четверг...">
                         <img src="img/portfolio_08.jpg" alt="gallery photo 8">
                     </a>
                 </div>
