--- a/kelnik_test/index.html
+++ b/kelnik_test/index.html
@@ -49,142 +49,138 @@
     </header>
 
     <main>
-      <section>
-        <div class="container">
-          <div class="section-title">Найдено 666 квартир</div>
+      <section class="container">
+        <h2 class="section-title">Найдено 666 квартир</h2>
 
-          <div class="catalog">
-            <div class="filter">
-              <div class="sort">
-                <span class="sort__label">Сортировать по:</span>
-                <div class="sort__type">
-                  <ul>
-                    <li>Цене</li>
-                  </ul>
-                </div>
+        <div class="catalog">
+          <div class="filter">
+            <div class="sort">
+              <span class="sort__label">Сортировать по:</span>
+              <div class="sort__type">
+                <ul>
+                  <li>Цене</li>
+                </ul>
               </div>
-              <span class="rooms">Комнатам</span>
             </div>
-
-            <div class="items">
-              <div class="catalog-item catalog-item--booked">
-                <div class="item__marks">
-                  <div class="mark">-17%</div>
-                  <div class="mark">Шок цена!</div>
-                </div>
-
-                <div class="item item--favourite">
-                  <div class="item__photo">
-                    <img src="./img/flat_44.png" alt="">
-                  </div>
-
-                  <div class="item__name">Студия №44</div>
-
-                  <div class="item__features">
-                    <div class="feature feature__finish">без<br>отделки</div>
-                    <div class="feature feature__area">
-                      <span>28 м<sup>2</sup></span>
-                      <span class="feature__sub-text">площадь</span>
-                    </div>
-                    <div class="feature feature__floor">
-                      <span>12/24</span>
-                      <span class="feature__sub-text">этаж</span>
-                    </div>
-                  </div>
-
-                  <div class="item__cost"><span class="cost">1 900 000</span> руб.</div>
-                </div>
-              </div> <!-- // item-->
-
-              <div class="catalog-item">
-                <div class="item__marks">
-                  <div class="mark">-17%</div>
-                  <div class="mark">Шок цена!</div>
-                </div>
-
-                <div class="item item--favourite">
-                  <div class="item__photo">
-                    <img src="./img/flat_666.png" alt="">
-                  </div>
-
-                  <div class="item__name">Однокомнатная №666</div>
-
-                  <div class="item__features">
-                    <div class="feature feature__finish">базовая<br>отделка</div>
-
-                    <div class="feature feature__area">
-                      <span>66 м<sup>2</sup></span>
-                      <span class="feature__sub-text">площадь</span>
-                    </div>
-
-                    <div class="feature feature__floor">
-                      <span>6/6</span>
-                      <span class="feature__sub-text">этаж</span>
-                    </div>
-                  </div>
-
-                  <div class="item__cost"><span class="cost">1 666 666</span> руб.</div>
-                </div>
-              </div> <!-- // item-->
-
-              <div class="catalog-item catalog-item--sold">
-                <div class="item__marks">
-                  <div class="mark">-17%</div>
-                  <div class="mark">Шок цена!</div>
-                  <!--  <?php if($item->stock): ?>
-                                        <div class="mark"><?= $item->stock ?></div>
-                                      <?php endif;
-                                      if($item->shock_cost): ?>
-                                        <div class="mark"><?= $item->shock_cost ?></div>
-                                      <?php endif; ?>-->
-                </div>
-
-                <div class="item item--favourite">
-                  <div class="item__photo">
-                    <img src="./img/flat_25.png" alt="">
-                  </div>
-
-                  <div class="item__name">Двухкомнатная №567</div>
-
-                  <div class="item__features">
-                    <div class="feature feature__finish">черновая<br>отделка</div>
-
-                    <div class="feature feature__area">
-                      <span>65.6 м<sup>2</sup></span>
-                      <span class="feature__sub-text">площадь</span>
-                    </div>
-
-                    <div class="feature feature__floor">
-                      <span>7/14</span>
-                      <span class="feature__sub-text">этаж</span>
-                    </div>
-                  </div>
-
-                  <div class="item__cost"><span class="cost">5 900 000</span> руб.</div>
-                </div>
-              </div> <!-- // item-->
-            </div>
-
-            <div class="show_more">Показать еще 20</div>
+            <span class="rooms">Комнатам</span>
           </div>
+
+          <div class="items">
+            <div class="catalog-item catalog-item--booked">
+              <div class="item__marks">
+                <div class="mark">-17%</div>
+                <div class="mark">Шок цена!</div>
+              </div>
+
+              <div class="item item--favourite">
+                <div class="item__photo">
+                  <img src="./img/flat_44.png" alt="">
+                </div>
+
+                <div class="item__name">Студия №44</div>
+
+                <div class="item__features">
+                  <div class="feature feature__finish">без<br>отделки</div>
+                  <div class="feature feature__area">
+                    <span>28 м<sup>2</sup></span>
+                    <span class="feature__sub-text">площадь</span>
+                  </div>
+                  <div class="feature feature__floor">
+                    <span>12/24</span>
+                    <span class="feature__sub-text">этаж</span>
+                  </div>
+                </div>
+
+                <div class="item__cost"><span class="cost">1 900 000</span> руб.</div>
+              </div>
+            </div> <!-- // item-->
+
+            <div class="catalog-item">
+              <div class="item__marks">
+                <div class="mark">-17%</div>
+                <div class="mark">Шок цена!</div>
+              </div>
+
+              <div class="item item--favourite">
+                <div class="item__photo">
+                  <img src="./img/flat_666.png" alt="">
+                </div>
+
+                <div class="item__name">Однокомнатная №666</div>
+
+                <div class="item__features">
+                  <div class="feature feature__finish">базовая<br>отделка</div>
+
+                  <div class="feature feature__area">
+                    <span>66 м<sup>2</sup></span>
+                    <span class="feature__sub-text">площадь</span>
+                  </div>
+
+                  <div class="feature feature__floor">
+                    <span>6/6</span>
+                    <span class="feature__sub-text">этаж</span>
+                  </div>
+                </div>
+
+                <div class="item__cost"><span class="cost">1 666 666</span> руб.</div>
+              </div>
+            </div> <!-- // item-->
+
+            <div class="catalog-item catalog-item--sold">
+              <div class="item__marks">
+                <div class="mark">-17%</div>
+                <div class="mark">Шок цена!</div>
+                <!--  <?php if($item->stock): ?>
+                                      <div class="mark"><?= $item->stock ?></div>
+                                    <?php endif;
+                                    if($item->shock_cost): ?>
+                                      <div class="mark"><?= $item->shock_cost ?></div>
+                                    <?php endif; ?>-->
+              </div>
+
+              <div class="item item--favourite">
+                <div class="item__photo">
+                  <img src="./img/flat_25.png" alt="">
+                </div>
+
+                <div class="item__name">Двухкомнатная №567</div>
+
+                <div class="item__features">
+                  <div class="feature feature__finish">черновая<br>отделка</div>
+
+                  <div class="feature feature__area">
+                    <span>65.6 м<sup>2</sup></span>
+                    <span class="feature__sub-text">площадь</span>
+                  </div>
+
+                  <div class="feature feature__floor">
+                    <span>7/14</span>
+                    <span class="feature__sub-text">этаж</span>
+                  </div>
+                </div>
+
+                <div class="item__cost"><span class="cost">5 900 000</span> руб.</div>
+              </div>
+            </div> <!-- // item-->
+          </div>
+
+          <div class="show_more">Показать еще 20</div>
         </div>
       </section>
 
-      <section>
-        <div class="container">
-          <div class="subscribe">
-            <div class="subscribe__title">Успей купить!</div>
-            <div class="subscribe__text">Подпишись и успей словить все акции</div>
-          </div>
-
-          <form action="" class="subsribe_form">
-            <input type="email" placeholder="E-mail" class="subsribe__input">
-            <input type="submit" value="Подписаться" class="subsribe__submit">
-            <input type="checkbox" id="subscribe__acception" checked  class="subsribe__check">
-            <label for="subscribe__acception"  class="subsribe__label">подписаться на новости</label>
-          </form>
+      <section class="container">
+        <div class="subscribe">
+          <div class="subscribe__title">Успей купить!</div>
+          <h2 class="subscribe__text">Подпишись и успей словить все акции</h2>
         </div>
-      </section>      
+
+        <form class="subsribe_form">
+          <input type="email" placeholder="E-mail" class="subsribe__input">
+          <input type="submit" value="Подписаться" class="subsribe__submit">
+          <input type="checkbox" id="subscribe__acception" checked  class="subsribe__check">
+          <label for="subscribe__acception"  class="subsribe__label">подписаться на новости</label>
+        </form>
+      </section>
 
     </main>
     <script src="./js/common.js"></script>
