--- a/lampam_net/index.html
+++ b/lampam_net/index.html
@@ -3,8 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Lampam.net - Home page</title>
-	<link rel="stylesheet" href="css/grid.css">
-	<link rel="stylesheet" href="css/style.css">
+	<!-- <link rel="stylesheet" href="css/bootstrap-grid.css?6"> -->
+
+	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+	<link rel="stylesheet" href="css/bootstrap-grid.css">
+	<!-- <link rel="stylesheet" href="css/grid.css?6"> -->
+	<link rel="stylesheet" href="css/style.css?6">
 </head>
 
 
@@ -14,12 +18,20 @@
 	<div class="header">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-12">
-					
+				<!-- <div class="col-xs-12 col-sm-6 col-md-12 col-lg-6 col-xl-12"> -->
+				<div class="col-9 col-sm-3 col-md-9 col-lg-6">
+				<!-- <div class="col-12 col-sm-6 col-md-12 col-lg-6 col-xl-12"> -->
+					<div style="width: 100%; background: red; height: 50px;"></div>
+				</div>
+
+				<!-- <div class="col-xs-12 col-sm-6 col-md-12 col-lg-6 col-xl-12"> -->
+				<div class="col-3 col-sm-9 col-md-3 col-lg-6">
+				<!-- <div class="col-12 col-sm-6 col-md-12 col-lg-6 col-xl-12"> -->
+					<div style="width: 100%; background: blue; height: 50px;"></div>
 				</div>
 			</div>
 		</div>
 	</div>
-	
+
 </body>
 </html>
