--- a/lampam_net/index.html
+++ b/lampam_net/index.html
@@ -280,13 +280,13 @@
 		.copyrights {
 			border-top: 1px solid rgba(255,255,255,0.7);
 			margin-top: 40px;
-			padding-bottom: 40px;
 		}
 		.copyrights__text, .copyrights__year {
 			font-size: 14px;
 			color: rgba(255,255,255,0.7);
 			text-transform: uppercase;
 			line-height: 1.5;
+			margin-bottom: 0;
 		}
 		.copyrights__text {
 			width: 75%;
